View Issue Details

IDProjectCategoryView StatusLast Update
0023821Open CASCADEOCCT:Samplespublic2014-01-11 12:06
ReportersanAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023821: Improve qmake project files for Qt samples
DescriptionIt is necessary to improve .pro files for Qt samples (IESample and Tutorial) so as not to copy the sources and resources from Common and Interface folders each time and include them into the generated VC++ projects from their original location.
TagsNo tags attached.
Test case numberNot needed

Relationships

related to 0023459 closedbugmaster Open CASCADE Update QT samples 

Activities

san

2013-03-07 18:49

developer   ~0023633

Branch CR23821 ready for reviewing.

apl

2013-03-11 17:17

developer   ~0023647

Dear BugMaster,

The branch was reviewed without remarks.

Please proceed.

dbv

2013-03-12 18:28

developer   ~0023688

With this patch qmake on Mac OS X generates incorrect makefile. Which results in an error:

make: *** No rule to make target `/Users/dbv/Work/git-repos/occt/samples/qt/Tutorial/Darwin/res/Common-icon.qm', needed by `compilers'. Stop.

san

2013-03-13 19:32

developer   ~0023706

Branch CR23821 updated, ready for reviewing.

dbv

2013-03-14 10:37

developer   ~0023708

No remarks.

Dear bugmaster, please test compilation of Tutorial and IESample.

san

2013-03-18 14:48

developer   ~0023776

Branch CR23821_1 in OCCT Git repository containing extra correction related to scene dump image formats is ready for testing.

apn

2013-03-18 15:01

administrator   ~0023778

Branch CR23821_1 is OK. There are no extension .xwd in menu "Export file - Image" in samples. Changes will be integrated.

dbv

2013-03-19 14:17

developer   ~0023791

Last edited: 2013-03-19 14:29

Dear bugmaster,

Qt samples (ACIS, DXF, Parasolid, SSP) have been updated in occt-products branch CR23821, please test.
Note that SSP sample contain fixes from occt-products branch CR23763, so in case of merge conflicts (for SSP sample) use changes from branch CR23821.

apn

2013-03-19 16:07

administrator   ~0023796

Modified samples environment adding to env.sh files LD_LIBRARY_PATH.

apn

2013-03-19 16:22

administrator   ~0023797

Qt samples ACIS, DXF, Parasolid and SPP were successfully tested on Windows and Linux platforms.

bugmaster

2013-03-19 17:09

administrator   ~0023804

Fix has been integrated into master of occt-products repository

san

2013-04-22 20:14

developer   ~0024242

Dear bugmaster,

Branch CR23821_for_6_6_0 in occt-products repository contains the patch necessary for correct MSVC++ project generation by qmake for Qt samples.

Related Changesets

occt: master fad8962a

2013-03-14 13:21:47

san

Details Diff
0023821: Improve qmake project files for Qt samples

Project file extension corrected for VS 2010/2012 solutions
Sources and resource files from Common and Interface sub-foldrs added to qmake project files from their original location.
RES_DIR environment variable redirected to the binary directory, all resource files copied there to keep the source tree intact.
RES_DIR environment variable corrected under Linux/MacOS similalry to Windows.
Makefile generation corrected under MacOS:
- filenames used as the output for the extra compilers instead of the absolute paths.
- mkdir and cp command options corrected
Affected Issues
0023821
mod - samples/qt/IESample/env.bat Diff File
mod - samples/qt/IESample/env.sh Diff File
mod - samples/qt/IESample/generation-vc-projects.bat Diff File
mod - samples/qt/IESample/IESample-vc10.sln Diff File
mod - samples/qt/IESample/IESample-vc11.sln Diff File
mod - samples/qt/IESample/IESample-vc7.sln Diff File
mod - samples/qt/IESample/IESample-vc9.sln Diff File
mod - samples/qt/IESample/IESample.pro Diff File
mod - samples/qt/IESample/run.sh Diff File
mod - samples/qt/Tutorial/env.bat Diff File
mod - samples/qt/Tutorial/env.sh Diff File
mod - samples/qt/Tutorial/generation-vc-projects.bat Diff File
mod - samples/qt/Tutorial/run.sh Diff File
mod - samples/qt/Tutorial/Tutorial-vc10.sln Diff File
mod - samples/qt/Tutorial/Tutorial-vc11.sln Diff File
mod - samples/qt/Tutorial/Tutorial-vc7.sln Diff File
mod - samples/qt/Tutorial/Tutorial.pro Diff File

occt: master 1d8ec4db

2013-03-18 08:38:56

san

Details Diff
0023821: Improve qmake project files for Qt samples
Scene dump image file extensions corrected.
Affected Issues
0023821
mod - samples/qt/Common/src/MDIWindow.cxx Diff File

Issue History

Date Modified Username Field Change
2013-03-07 18:29 san New Issue
2013-03-07 18:29 san Assigned To => bugmaster
2013-03-07 18:49 san Note Added: 0023633
2013-03-07 18:49 san Assigned To bugmaster => apl
2013-03-07 18:49 san Status new => resolved
2013-03-07 18:52 san Relationship added related to 0023459
2013-03-11 08:48 abv Assigned To apl => bugmaster
2013-03-11 16:23 bugmaster Assigned To bugmaster => apn
2013-03-11 17:17 apl Note Added: 0023647
2013-03-11 17:17 apl Status resolved => reviewed
2013-03-12 18:28 dbv Note Added: 0023688
2013-03-13 09:47 abv Assigned To apn => san
2013-03-13 09:47 abv Status reviewed => feedback
2013-03-13 19:32 san Note Added: 0023706
2013-03-13 19:32 san Status feedback => assigned
2013-03-13 19:32 san Assigned To san => dbv
2013-03-13 19:32 san Status assigned => resolved
2013-03-14 10:37 dbv Note Added: 0023708
2013-03-14 10:37 dbv Assigned To dbv => bugmaster
2013-03-14 10:37 dbv Status resolved => reviewed
2013-03-14 17:50 san Changeset attached => occt master fad8962a
2013-03-14 17:50 san Assigned To bugmaster => san
2013-03-14 17:50 san Status reviewed => verified
2013-03-14 17:50 san Resolution open => fixed
2013-03-14 21:32 san Assigned To san => bugmaster
2013-03-14 21:32 san Status verified => feedback
2013-03-14 21:32 san Resolution fixed => reopened
2013-03-18 14:48 san Note Added: 0023776
2013-03-18 15:01 apn Note Added: 0023778
2013-03-19 14:17 dbv Note Added: 0023791
2013-03-19 14:29 dbv Note Edited: 0023791
2013-03-19 16:07 apn Note Added: 0023796
2013-03-19 16:22 apn Note Added: 0023797
2013-03-19 16:23 apn Test case number => Not needed
2013-03-19 16:23 apn Status feedback => tested
2013-03-19 17:09 bugmaster Note Added: 0023804
2013-03-19 17:09 bugmaster Status tested => verified
2013-03-19 17:09 bugmaster Resolution reopened => fixed
2013-03-19 17:09 bugmaster Assigned To bugmaster => san
2013-03-20 13:03 san Changeset attached => occt master 1d8ec4db
2013-04-22 20:14 san Assigned To san => bugmaster
2013-04-22 20:14 san Note Added: 0024242
2013-04-22 20:14 san Status verified => feedback
2013-04-22 20:14 san Resolution fixed => reopened
2013-04-26 10:21 bugmaster Status feedback => closed
2013-04-26 10:21 bugmaster Resolution reopened => fixed
2013-04-29 15:25 aiv Fixed in Version => 6.6.0
2014-01-11 12:06 abv Category OCCT Release:QT => OCCT:Samples