0023821: Improve qmake project files for Qt samples Scene dump image file extensions corrected.